# deepkey-redux

./: .gitignore  .hcignore  Cargo.toml  Makefile  README.md  agent.key  app.json  conductor-config-old.toml  conductor-config.toml  config.nix  default.nix  device-1-n.key  device-1.key  device-2-n.key  device-2.key  manifest.json  pkgs.nix  shell.nix
.circleci/: config.yml
.github/: CODEOWNERS
hc_common/utils/: Cargo.toml
hc_common/utils/src/: lib.rs
test/: config.js  create_agent_test.sh  default.nix  index.js  manual.js  package-lock.json  package.json
test/curl/: add_instance.sh  create_agent.sh  create_agent_test.sh  get_auth.sh  is_init.sh  set_authorizor.sh
test/doc-seeds/: seeds.md
test/e2e/: default.nix
test/test-keys/: test-agent-1.key  test-agent-2.key
test/unit/: default.nix
test/unit_test/: genesis.js  notification.js  revoke_rev_key.js  set_up_conductor.js  test_init.js  test_key_status.js  test_trait.js  update_auth_entries.js  update_entries.js
zomes/converse/code/: Cargo.toml
zomes/converse/code/src/: lib.rs
zomes/deepkey/code/: .build  Cargo.toml
zomes/deepkey/code/src/: lib.rs
zomes/deepkey/code/src/authorizor/: authorizor.rs  handlers.rs  mod.rs
zomes/deepkey/code/src/device_authorization/: device_authorization.rs  mod.rs
zomes/deepkey/code/src/dpki/: mod.rs
zomes/deepkey/code/src/key_anchor/: handlers.rs  mod.rs
zomes/deepkey/code/src/key_registration/: handlers.rs  key_registration.rs  mod.rs
zomes/deepkey/code/src/keyset_root/: handlers.rs  keyset_root.rs  mod.rs
zomes/deepkey/code/src/root_hash/: mod.rs  root_hash.rs
zomes/deepkey/code/src/rules/: handlers.rs  mod.rs  rules.rs
zomes/dpki/: zome.json
zomes/dpki/code/: .hcbuild  Cargo.toml
zomes/dpki/code/src/: lib.rs
zomes/dpki/code/src/app_key/: handlers.rs  mod.rs
zomes/dpki/code/src/authorizor/: handlers.rs  mod.rs
zomes/dpki/code/src/device_authorization/: device_authorization.rs  handlers.rs  mod.rs
zomes/dpki/code/src/dpki_trait/: mod.rs
zomes/dpki/code/src/key_anchor/: handlers.rs  mod.rs
zomes/dpki/code/src/key_registration/: handlers.rs  mod.rs
zomes/dpki/code/src/keyset_root/: handlers.rs  mod.rs
zomes/dpki/code/src/rules/: handlers.rs  mod.rs
zomes/dpki/code/src/test/: mod.rs
zomes/dpki/code/src/utils/: mod.rs
(+8 files in other folders)
