[package]
name = "converse"
version = "0.1.0"
authors = ["<>"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = "=1.0.39"
serde_derive = "=1.0.89"
# hdk = { path = "../../../../hdk-rust" }
hdk = { git = "https://github.com/holochain/holochain-rust" , branch = "release-0.0.12-alpha1" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
