[package]
name = "deepkey"
version = "0.0.1"
authors = ["zo-el <joel.ulahanna@holo.host>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hdk = { git = "https://github.com/holochain/holochain-rust" , branch = "release-0.0.12-alpha1" }
holochain_core_types_derive= { git = "https://github.com/holochain/holochain-rust" , branch = "release-0.0.12-alpha1" }
utils = { path = "../../../hc_common/utils" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
