[package]
name = "dpki"
version = "0.0.1"
authors = ["zo-el <joel.ulahanna@holo.host>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hdk = { git = "https://github.com/holochain/holochain-rust" , branch = "release-0.0.21-alpha1" }
holochain_json_derive = "=0.0.1-alpha2"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
