[package]
name = "dpki"
version = "0.0.1"
authors = ["zo-el <joel.ulahanna@holo.host>"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
hdk = { git = "https://github.com/holochain/holochain-rust" , branch = "release-0.0.23-alpha1" }
holochain_json_derive = "=0.0.15"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
